mychart/templates/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webappsvc
  labels:
    app: webapp
spec:
  type: NodePort
  ports:
  - port: 9000
    nodePort: 30090
    targetPort: 9000
    protocol: TCP
  selector:
    app: webapp
